test/compile_errors/stage1/obj/invalid_break_expression.zig
export fn f() void {
    break;
}

// invalid break expression
//
// tmp.zig:2:5: error: break expression outside loop
